--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coming Soon</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <style>
     body {
-      background-color: #f8f9fa;
+      background-color: #8a2be2;
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
     }
 
     .coming-soon {
@@ -24,22 +27,34 @@
       font-size: 48px;
       font-weight: bold;
       margin-bottom: 20px;
+      color: #fff;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
     }
 
     .coming-soon p {
       font-size: 18px;
       margin-bottom: 40px;
+      color: #fff;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
     }
 
     .social-icons a {
       display: inline-block;
       margin-right: 10px;
-      color: #333;
+      color: #fff;
       font-size: 24px;
+      background-color: #551a8b;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      line-height: 40px;
+      text-align: center;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
     }
 
     .social-icons a:hover {
-      color: #8a2be2;
+      background-color: #b48fd1;
     }
   </style>
 </head>
@@ -49,9 +64,9 @@
     <p>We're working on something amazing. Stay tuned!</p>
     <p>Follow us on Discord for updates:</p>
     <div class="social-icons">
-      <a href="https://discord.gg/your-discord-invite-link"><i class="fa fa-discord"></i></a>
+      <a href="https://discord.gg/your-discord-invite-link"><i class="fab fa-discord"></i></a>
     </div>
   </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
