--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     }
 
     .coming-soon {
+      position: relative;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -38,6 +39,10 @@
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
     }
 
+    .social-icons {
+      margin-top: 30px;
+    }
+
     .social-icons a {
       display: inline-block;
       margin-right: 10px;
@@ -56,9 +61,50 @@
     .social-icons a:hover {
       background-color: #b48fd1;
     }
+
+    .background-shapes {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+
+    .shape {
+      position: absolute;
+      display: block;
+      border-radius: 50%;
+      opacity: 0.3;
+    }
+
+    .shape.circle {
+      width: 200px;
+      height: 200px;
+      background-color: #b48fd1;
+    }
+
+    .shape.rectangle {
+      width: 400px;
+      height: 200px;
+      background-color: #b48fd1;
+      transform: rotate(-45deg);
+    }
+
+    .shape.triangle {
+      width: 200px;
+      height: 200px;
+      background-color: #b48fd1;
+      clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+    }
   </style>
 </head>
 <body>
+  <div class="background-shapes">
+    <div class="shape circle"></div>
+    <div class="shape rectangle"></div>
+    <div class="shape triangle"></div>
+  </div>
   <div class="coming-soon">
     <h1>Coming Soon</h1>
     <p>We're working on something amazing. Stay tuned!</p>
@@ -69,4 +115,5 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
-</html>
+
+ 
