--- a/index.html
+++ b/index.html
@@ -4,62 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coming Soon</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <style>
     body {
-      background-color: #8a2be2;
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-    }
-
-    .coming-soon {
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-    }
-
-    .coming-soon h1 {
-      font-size: 48px;
-      font-weight: bold;
-      margin-bottom: 20px;
-      color: #fff;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-    }
-
-    .coming-soon p {
-      font-size: 18px;
-      margin-bottom: 40px;
-      color: #fff;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-    }
-
-    .social-icons {
-      margin-top: 30px;
-    }
-
-    .social-icons a {
-      display: inline-block;
-      margin-right: 10px;
-      color: #fff;
-      font-size: 24px;
-      background-color: #551a8b;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      line-height: 40px;
-      text-align: center;
-      text-decoration: none;
-      transition: background-color 0.3s ease;
-    }
-
-    .social-icons a:hover {
-      background-color: #b48fd1;
+      background-color: #f8f9fa;
+      overflow: hidden;
     }
 
     .background-shapes {
@@ -68,34 +18,81 @@
       left: 0;
       width: 100%;
       height: 100%;
-      overflow: hidden;
     }
 
     .shape {
       position: absolute;
-      display: block;
-      border-radius: 50%;
-      opacity: 0.3;
+      animation: moveShape linear infinite;
     }
 
     .shape.circle {
-      width: 200px;
-      height: 200px;
-      background-color: #b48fd1;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      background-color: #8a2be2;
+      opacity: 0.6;
     }
 
     .shape.rectangle {
-      width: 400px;
-      height: 200px;
-      background-color: #b48fd1;
-      transform: rotate(-45deg);
+      width: 150px;
+      height: 75px;
+      background-color: #00bfff;
+      opacity: 0.6;
     }
 
     .shape.triangle {
-      width: 200px;
-      height: 200px;
-      background-color: #b48fd1;
-      clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+      width: 0;
+      height: 0;
+      border-left: 50px solid transparent;
+      border-right: 50px solid transparent;
+      border-bottom: 100px solid #9932cc;
+      opacity: 0.6;
+    }
+
+    .coming-soon {
+      position: relative;
+      z-index: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+      color: #fff;
+    }
+
+    .coming-soon h1 {
+      font-size: 48px;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+
+    .coming-soon p {
+      font-size: 18px;
+      margin-bottom: 40px;
+    }
+
+    .social-icons a {
+      display: inline-block;
+      margin-right: 10px;
+      color: #fff;
+      font-size: 24px;
+    }
+
+    .social-icons a:hover {
+      color: #8a2be2;
+    }
+
+    @keyframes moveShape {
+      0% {
+        transform: translate(0, 0);
+      }
+      50% {
+        transform: translate(-50px, 50px);
+      }
+      100% {
+        transform: translate(0, 0);
+      }
     }
   </style>
 </head>
@@ -106,14 +103,29 @@
     <div class="shape triangle"></div>
   </div>
   <div class="coming-soon">
-    <h1>Coming Soon</h1>
-    <p>We're working on something amazing. Stay tuned!</p>
-    <p>Follow us on Discord for updates:</p>
-    <div class="social-icons">
-      <a href="https://discord.gg/your-discord-invite-link"><i class="fab fa-discord"></i></a>
+    <div class="container">
+      <h1>Coming Soon</h1>
+      <p>We're working on something amazing. Stay tuned!</p>
+      <p>Follow us on Discord for updates:</p>
+      <div class="social-icons">
+        <a href="https://discord.gg/your-discord-invite-link"><i class="fab fa-discord"></i></a>
+      </div>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script>
+    // Randomly position the shapes on page load
+    document.addEventListener('DOMContentLoaded', () => {
+      const shapes = document.querySelectorAll('.shape');
+      shapes.forEach(shape => {
+        shape.style.top = getRandomPosition(0, window.innerHeight - shape.offsetHeight) + 'px';
+        shape.style.left = getRandomPosition(0, window.innerWidth - shape.offsetWidth) + 'px';
+      });
+    });
 
- 
+    // Generate random position within a range
+    function getRandomPosition(min, max) {
+      return Math.random() * (max - min) + min;
+    }
+  </script>
+</body>
