--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
       height: 100%;
     }
 
-    .shape {
-      position: absolute;
-      animation: moveShape linear infinite;
-    }
+  .shape {
+    position: absolute;
+    transition: transform 1s ease-in-out;
+    animation: moveShapes 6s infinite alternate;
+  }
 
     .shape.circle {
       width: 100px;
@@ -83,17 +84,14 @@
       color: #8a2be2;
     }
 
-    @keyframes moveShape {
-      0% {
-        transform: translate(0, 0);
-      }
-      50% {
-        transform: translate(-50px, 50px);
-      }
-      100% {
-        transform: translate(0, 0);
-      }
+  @keyframes moveShapes {
+    0% {
+      transform: translate(0, 0);
     }
+    100% {
+      transform: translate(100vw, 100vh);
+    }
+  }
   </style>
 </head>
 <body>
