--- a/index.html
+++ b/index.html
@@ -111,21 +111,28 @@
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script>
+ <script>
     const shapes = document.querySelectorAll('.shape');
     const bodyWidth = document.body.clientWidth;
     const bodyHeight = document.body.clientHeight;
+    const shapeSize = 100;
+    const animationDuration = 6;
 
     shapes.forEach(shape => {
-      const translateX = getRandomNumber(-bodyWidth / 2, bodyWidth / 2);
-      const translateY = getRandomNumber(-bodyHeight / 2, bodyHeight / 2);
+      const translateX = getRandomNumber(shapeSize - bodyWidth, bodyWidth - shapeSize);
+      const translateY = getRandomNumber(shapeSize - bodyHeight, bodyHeight - shapeSize);
       const rotate = getRandomNumber(0, 360);
       const animationDelay = getRandomNumber(0, 5000);
+      const directionX = Math.random() < 0.5 ? -1 : 1;
+      const directionY = Math.random() < 0.5 ? -1 : 1;
 
       shape.style.setProperty('--translate-x', `${translateX}px`);
       shape.style.setProperty('--translate-y', `${translateY}px`);
       shape.style.setProperty('--rotate', `${rotate}deg`);
       shape.style.setProperty('animation-delay', `${animationDelay}ms`);
+      shape.style.setProperty('animation-duration', `${animationDuration}s`);
+      shape.style.setProperty('--direction-x', directionX);
+      shape.style.setProperty('--direction-y', directionY);
     });
 
     function getRandomNumber(min, max) {
