--- a/index.html
+++ b/index.html
@@ -112,36 +112,56 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
-    const shapes = document.querySelectorAll('.shape');
-    const bodyWidth = document.body.clientWidth;
-    const bodyHeight = document.body.clientHeight;
-    const shapeSize = 100;
-    const animationDuration = 6;
+  const shapes = document.querySelectorAll('.shape');
+  const bodyWidth = document.body.clientWidth;
+  const bodyHeight = document.body.clientHeight;
+  const shapeSize = 100;
+  const animationDuration = 6;
 
-    shapes.forEach(shape => {
-      const translateX = getRandomNumber(shapeSize, bodyWidth - shapeSize);
-      const translateY = getRandomNumber(shapeSize, bodyHeight - shapeSize);
-      const rotate = getRandomNumber(0, 360);
-      const animationDelay = getRandomNumber(0, 5000);
-      const directionX = getRandomDirection();
-      const directionY = getRandomDirection();
+  shapes.forEach(shape => {
+    const directionX = getRandomDirection();
+    const directionY = getRandomDirection();
+    let translateX = getRandomNumber(shapeSize, bodyWidth - shapeSize);
+    let translateY = getRandomNumber(shapeSize, bodyHeight - shapeSize);
+    let rotate = getRandomNumber(0, 360);
+    let deltaX = getRandomNumber(1, 3) * directionX;
+    let deltaY = getRandomNumber(1, 3) * directionY;
 
-      shape.style.setProperty('--translate-x', `${translateX}px`);
-      shape.style.setProperty('--translate-y', `${translateY}px`);
-      shape.style.setProperty('--rotate', `${rotate}deg`);
-      shape.style.setProperty('animation-delay', `${animationDelay}ms`);
-      shape.style.setProperty('animation-duration', `${animationDuration}s`);
-      shape.style.setProperty('--direction-x', directionX);
-      shape.style.setProperty('--direction-y', directionY);
-    });
+    shape.style.left = `${translateX}px`;
+    shape.style.top = `${translateY}px`;
+    shape.style.transform = `rotate(${rotate}deg)`;
 
-    function getRandomNumber(min, max) {
-      return Math.random() * (max - min) + min;
-    }
+    const animateShape = () => {
+      if (translateX + deltaX > bodyWidth - shapeSize || translateX + deltaX < 0) {
+        deltaX = -deltaX;
+        rotate = getRandomNumber(0, 360);
+      }
 
-    function getRandomDirection() {
-      return Math.random() < 0.5 ? -1 : 1;
-    }
-  </script>
+      if (translateY + deltaY > bodyHeight - shapeSize || translateY + deltaY < 0) {
+        deltaY = -deltaY;
+        rotate = getRandomNumber(0, 360);
+      }
+
+      translateX += deltaX;
+      translateY += deltaY;
+
+      shape.style.left = `${translateX}px`;
+      shape.style.top = `${translateY}px`;
+      shape.style.transform = `rotate(${rotate}deg)`;
+
+      requestAnimationFrame(animateShape);
+    };
+
+    animateShape();
+  });
+
+  function getRandomNumber(min, max) {
+    return Math.floor(Math.random() * (max - min + 1) + min);
+  }
+
+  function getRandomDirection() {
+    return Math.random() > 0.5 ? 1 : -1;
+  }
+</script>
 </body>
 </html>
