--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   const bodyWidth = document.body.clientWidth;
   const bodyHeight = document.body.clientHeight;
   const shapeSize = 100;
-  const animationDuration = 6;
+  const animationDuration = 6000;
 
   shapes.forEach(shape => {
     const directionX = getRandomDirection();
@@ -126,12 +126,16 @@
     let rotate = getRandomNumber(0, 360);
     let deltaX = getRandomNumber(1, 3) * directionX;
     let deltaY = getRandomNumber(1, 3) * directionY;
+    let startTime = null;
 
     shape.style.left = `${translateX}px`;
     shape.style.top = `${translateY}px`;
     shape.style.transform = `rotate(${rotate}deg)`;
 
-    const animateShape = () => {
+    const animateShape = (timestamp) => {
+      if (!startTime) startTime = timestamp;
+      const elapsedTime = timestamp - startTime;
+
       if (translateX + deltaX > bodyWidth - shapeSize || translateX + deltaX < 0) {
         deltaX = -deltaX;
         rotate = getRandomNumber(0, 360);
@@ -142,14 +146,23 @@
         rotate = getRandomNumber(0, 360);
       }
 
-      translateX += deltaX;
-      translateY += deltaY;
+      translateX += (deltaX * elapsedTime) / animationDuration;
+      translateY += (deltaY * elapsedTime) / animationDuration;
 
       shape.style.left = `${translateX}px`;
       shape.style.top = `${translateY}px`;
       shape.style.transform = `rotate(${rotate}deg)`;
 
-      requestAnimationFrame(animateShape);
+      if (elapsedTime < animationDuration) {
+        requestAnimationFrame(animateShape);
+      } else {
+        translateX = getRandomNumber(shapeSize, bodyWidth - shapeSize);
+        translateY = getRandomNumber(shapeSize, bodyHeight - shapeSize);
+        deltaX = getRandomNumber(1, 3) * getRandomDirection();
+        deltaY = getRandomNumber(1, 3) * getRandomDirection();
+        startTime = null;
+        requestAnimationFrame(animateShape);
+      }
     };
 
     animateShape();
