--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
     let rotate = getRandomNumber(0, 360);
     let deltaX = getRandomNumber(1, 3) * directionX;
     let deltaY = getRandomNumber(1, 3) * directionY;
+    let rotationSpeed = getRandomNumber(1, 3); // Random rotation speed
 
     shape.style.left = `${translateX}px`;
     shape.style.top = `${translateY}px`;
@@ -142,7 +143,7 @@
 
       translateX += deltaX;
       translateY += deltaY;
-      rotate += getRandomNumber(1, 3); // Randomly rotate the shape
+      rotate += rotationSpeed; // Rotate the shape by the specified speed
 
       shape.style.left = `${translateX}px`;
       shape.style.top = `${translateY}px`;
