--- a/index.html
+++ b/index.html
@@ -126,7 +126,6 @@
     let rotate = getRandomNumber(0, 360);
     let deltaX = getRandomNumber(1, 3) * directionX;
     let deltaY = getRandomNumber(1, 3) * directionY;
-    let rotationSpeed = getRandomNumber(1, 3); // Random rotation speed
 
     shape.style.left = `${translateX}px`;
     shape.style.top = `${translateY}px`;
@@ -143,7 +142,7 @@
 
       translateX += deltaX;
       translateY += deltaY;
-      rotate += rotationSpeed; // Rotate the shape by the specified speed
+      rotate += getRandomNumber(1, 5); // Random rotation between 1 to 5 degrees
 
       shape.style.left = `${translateX}px`;
       shape.style.top = `${translateY}px`;
