--- a/index.html
+++ b/index.html
@@ -115,20 +115,22 @@
   const shapes = document.querySelectorAll('.shape');
   const bodyWidth = document.body.clientWidth;
   const bodyHeight = document.body.clientHeight;
-  const shapeSize = 100;
   const animationDuration = 6000; // 6 seconds
 
   shapes.forEach(shape => {
+    const shapeSize = getRandomNumber(50, 150);
     const directionX = getRandomDirection();
     const directionY = getRandomDirection();
-    let translateX = getRandomNumber(shapeSize, bodyWidth - shapeSize);
-    let translateY = getRandomNumber(shapeSize, bodyHeight - shapeSize);
+    let translateX = getRandomNumber(0, bodyWidth - shapeSize);
+    let translateY = getRandomNumber(0, bodyHeight - shapeSize);
     let rotate = getRandomNumber(0, 360);
     let deltaX = getRandomNumber(1, 3) * directionX;
     let deltaY = getRandomNumber(1, 3) * directionY;
 
     shape.style.left = `${translateX}px`;
     shape.style.top = `${translateY}px`;
+    shape.style.width = `${shapeSize}px`;
+    shape.style.height = `${shapeSize}px`;
     shape.style.transform = `rotate(${rotate}deg)`;
 
     const animateShape = () => {
