--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
     <div class="shape circle"></div>
     <div class="shape rectangle"></div>
     <div class="shape triangle"></div>
+     <div class="shape circle"></div>
+    <div class="shape rectangle"></div>
+    <div class="shape triangle"></div>
+     <div class="shape circle"></div>
+    <div class="shape rectangle"></div>
+    <div class="shape triangle"></div>
+     <div class="shape circle"></div>
+    <div class="shape rectangle"></div>
+    <div class="shape triangle"></div>
   </div>
   <div class="coming-soon">
     <div class="container">
