--- a/index.html
+++ b/index.html
@@ -132,25 +132,22 @@
     const directionY = getRandomDirection();
     let translateX = getRandomNumber(0, bodyWidth - shapeSize);
     let translateY = getRandomNumber(0, bodyHeight - shapeSize);
-    let rotate = getRandomNumber(0, 360);
     let deltaX = getRandomNumber(1, 3) * directionX;
     let deltaY = getRandomNumber(1, 3) * directionY;
+    let rotationSpeed = getRandomNumber(1, 5);
 
     shape.style.left = `${translateX}px`;
     shape.style.top = `${translateY}px`;
     shape.style.width = `${shapeSize}px`;
     shape.style.height = `${shapeSize}px`;
-    shape.style.transform = `rotate(${rotate}deg)`;
 
     const animateShape = () => {
       if (translateX + deltaX > bodyWidth - shapeSize || translateX + deltaX < 0) {
         deltaX = -deltaX;
-        rotate += getRandomNumber(0, 180); // Random rotation between 0 to 180 degrees when bouncing off the horizontal edges
       }
 
       if (translateY + deltaY > bodyHeight - shapeSize || translateY + deltaY < 0) {
         deltaY = -deltaY;
-        rotate += getRandomNumber(0, 180); // Random rotation between 0 to 180 degrees when bouncing off the vertical edges
       }
 
       translateX += deltaX;
@@ -158,7 +155,7 @@
 
       shape.style.left = `${translateX}px`;
       shape.style.top = `${translateY}px`;
-      shape.style.transform = `rotate(${rotate}deg)`;
+      shape.style.transform = `rotate(${rotationSpeed}deg)`;
 
       requestAnimationFrame(animateShape);
     };
