--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
     let deltaX = getRandomNumber(1, 3) * directionX;
     let deltaY = getRandomNumber(1, 3) * directionY;
     let rotationSpeed = getRandomNumber(1, 5);
+    let rotationAngle = 0;
 
     shape.style.left = `${translateX}px`;
     shape.style.top = `${translateY}px`;
@@ -152,10 +153,11 @@
 
       translateX += deltaX;
       translateY += deltaY;
+      rotationAngle += rotationSpeed;
 
       shape.style.left = `${translateX}px`;
       shape.style.top = `${translateY}px`;
-      shape.style.transform = `rotate(${rotationSpeed}deg)`;
+      shape.style.transform = `rotate(${rotationAngle}deg)`;
 
       requestAnimationFrame(animateShape);
     };
