--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
   <title>Coming Soon</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Favicon for desktop browsers -->
+<link rel="icon" type="image/png" sizes="32x32" href="/Favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/Favicon/favicon-16x16.png">
+
+<!-- Favicon for iOS devices -->
+<link rel="apple-touch-icon" sizes="180x180" href="/Favicon/apple-touch-icon.png">
+<link rel="shortcut icon" href="/Favicon/favicon.ico" type="image/x-icon">
+
+
+<!-- Favicon for Android devices -->
+<link rel="icon" type="image/png" sizes="192x192" href="/Favicon/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="/Favicon/android-chrome-512x512.png">
+
+  <!-- Favicon for Windows 8/10 -->
+<meta name="msapplication-TileImage" content="/Favicon/ms-icon-144x144.png">
+<meta name="msapplication-TileColor" content="#ffffff">
   <style>
     body {
       background-color: #8a2be2;
