--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <p>We're working on something amazing. Stay tuned!</p>
       <p>Follow us on Discord for updates:</p>
       <div class="social-icons">
-        <a href="https://discord.gg/your-discord-invite-link"><i class="fab fa-discord"></i></a>
+        <a href="https://discord.gg/a52NCkkMQp"><i class="fab fa-discord"></i></a>
       </div>
     </div>
   </div>
